syntax = "proto3";


option java_package = "com.example.grpc";
option java_multiple_files = true;


message PrimeNumberDecompositionRequest{
	int32 number = 1;
}

message PrimeNumberDecompositionResponse{
	int32 prime_factor = 1;
}

service CalculatorService {
	//server streaming
	rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
	
}	